UUIDUtil now uses JDK Base64 (for JDK > 8)